--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "description": "[...]",
   "main": "index.js",
   "dependencies": {
+    "material-design-icons": "^3.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "styled-components": "^4.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
