--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "description": "[...]",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.18.0",
+    "cors": "^2.8.5",
     "material-design-icons": "^3.0.1",
+    "node-sass": "^4.10.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
