--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "format": "prettier --write '**/*.{js,jsx,json,yml,yaml}'",
+    "format:check": "prettier --check '**/*.{js,jsx,json,yml,yaml}'",
+    "lint": "eslint --ext .js,.jsx \"./\" --quiet --cache --color",
+    "lint:fix": "yarn lint --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,5 +36,13 @@
   "keywords": [
     "tachovendo",
     "reprograma"
-  ]
+  ],
+  "devDependencies": {
+    "eslint": "^7.28.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.3.1"
+  }
 }
