--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.21.2",
     "cors": "^2.8.5",
     "material-design-icons": "^3.0.1",
+    "next": "^11.1.2",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -17,6 +18,7 @@
     "styled-components": "^5.3.1"
   },
   "scripts": {
+    "dev": "next dev",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "format": "prettier --write '**/*.{js,jsx,json,yml,yaml}'",
